[gd_scene load_steps=7 format=3 uid="uid://cao466qcjkkpg"]

[ext_resource type="Script" path="res://Scripts/Gameplay/Obstacles/icePillar.gd" id="1_4bf5d"]
[ext_resource type="Texture2D" uid="uid://conjrjbsecjxi" path="res://Sprites/StageObjects/spr_beegIcePillar.png" id="1_bojoy"]
[ext_resource type="Texture2D" uid="uid://bkev1cpv7star" path="res://Sprites/StageObjects/debris.png" id="2_m4hrh"]
[ext_resource type="AudioStream" uid="uid://dwrroor5g7k2u" path="res://Sounds/sfx_iceWallBreak.wav" id="4_j5y86"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a3iik"]
size = Vector2(90, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hwwet"]
size = Vector2(32, 162)

[node name="BigIcePillar" type="StaticBody2D"]
script = ExtResource("1_4bf5d")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_bojoy")
centered = false
hframes = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(35, 132)
shape = SubResource("RectangleShape2D_a3iik")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(32, 79)
shape = SubResource("RectangleShape2D_hwwet")

[node name="part1" type="CPUParticles2D" parent="."]
position = Vector2(32, 17)
scale = Vector2(2, 2)
emitting = false
amount = 16
lifetime = 0.3
one_shot = true
speed_scale = 0.5
explosiveness = 1.0
randomness = 0.95
lifetime_randomness = 1.0
texture = ExtResource("2_m4hrh")
emission_shape = 1
emission_sphere_radius = 0.01
direction = Vector2(0, -2)
spread = 168.22
initial_velocity_min = 112.14
initial_velocity_max = 289.71
scale_amount_min = 0.2
scale_amount_max = 1.2

[node name="part2" type="CPUParticles2D" parent="."]
position = Vector2(32, 64)
scale = Vector2(2, 2)
emitting = false
amount = 16
lifetime = 0.3
one_shot = true
speed_scale = 0.5
explosiveness = 1.0
randomness = 0.95
lifetime_randomness = 1.0
texture = ExtResource("2_m4hrh")
emission_shape = 1
emission_sphere_radius = 0.01
direction = Vector2(0, -2)
spread = 168.22
initial_velocity_min = 112.14
initial_velocity_max = 289.71
scale_amount_min = 0.2
scale_amount_max = 1.2

[node name="part3" type="CPUParticles2D" parent="."]
position = Vector2(32, 120)
scale = Vector2(2, 2)
emitting = false
amount = 16
lifetime = 0.3
one_shot = true
speed_scale = 0.5
explosiveness = 1.0
randomness = 0.95
lifetime_randomness = 1.0
texture = ExtResource("2_m4hrh")
emission_shape = 1
emission_sphere_radius = 0.01
direction = Vector2(0, -2)
spread = 168.22
initial_velocity_min = 112.14
initial_velocity_max = 289.71
scale_amount_min = 0.2
scale_amount_max = 1.2

[node name="Break" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_j5y86")
volume_db = 12.0
bus = &"SoundEffects"
